manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hopegiversbloodbank
  labels:
    app: hopegiversbloodbank
    environment: production
