manifests/database-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: hopegiversbloodbank
spec:
  serviceName: mysqldb
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      securityContext:
        fsGroup: 999   # mysql group ID fixes volume permission issues
      containers:
        - name: mysql
          image: manju9676/hopegiversbloodbank-database:30
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          livenessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "127.0.0.1"]
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "127.0.0.1"]
            initialDelaySeconds: 5
            periodSeconds: 10

  volumeClaimTemplates:
    - metadata:
        name: mysql-pvc
      spec:
        storageClassName: aws-ebs
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
