manifests/database-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  namespace: hopegiversbloodbank
spec:
  selector:
    app: mysql
  ports:    
    - port: 3306
  clusterIP: None  #Headless service for StatefulSet
