manifests/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: hopegiversbloodbank
spec:
  selector:
    app: frontend
  ports:    
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
